@@ -50,12 +50,12 @@ CREATE TABLE `identities` (
   `user_id` int(10) unsigned NOT NULL default '0',
   `del` tinyint(1) NOT NULL default '0',
   `standard` tinyint(1) NOT NULL default '0',
-  `name` varchar(128) NOT NULL default '',
+  `name` varchar(128) NOT NULL,
   `organization` varchar(128) NOT NULL default '',
-  `email` varchar(128) NOT NULL default '',
+  `email` varchar(128) NOT NULL,
   `reply-to` varchar(128) NOT NULL default '',
   `bcc` varchar(128) NOT NULL default '',
-  `signature` text NOT NULL,
+  `signature` text NOT NULL default '',
   `html_signature` tinyint(1) NOT NULL default '0',
   PRIMARY KEY  (`identity_id`),
   KEY `user_id` (`user_id`)
